# SCuckoo-masterV2

./: build.gradle  config.gradle  settings.gradle
appV1/: CMakeLists.txt  build.gradle
appV1/release/: output.json
appV1/src/main/: AndroidManifest.xml
appV1/src/main/cpp/: test.c
appV1/src/main/res/anim/: alpha_show_anim.xml  anim_loading_imag.xml  popshow_operation_anim_down.xml  popshow_operation_anim_up.xml
appV1/src/main/res/drawable/: anim_playrevaudio.xml  anim_playsendaudio.xml  bg_close_gray.xml  bg_editext_line.xml  bg_gradient_blue_oval.xml  bg_gradient_brack.xml  bg_gradient_tab1.xml  bg_gradient_tab2.xml  bg_gradient_tab3.xml  bg_gradient_tab4.xml  bg_gradient_theme.xml  bg_gradient_violet.xml  bg_gradient_violet_rectangle.xml  bg_line.xml  bg_main_ic_repair.xml  bg_message_style_theme.xml  bg_message_style_while.xml  bg_pupowidowns.xml  bg_radio_group.xml  bg_style_gray.xml  bg_style_gray_v16.xml  bg_style_gray_v2.xml  bg_style_theme.xml  bg_style_theme_2dp.xml  bg_style_theme_circle.xml  bg_style_theme_sloid.xml  bg_style_theme_stroke.xml  bg_style_theme_stroke_2dp.xml  bg_style_theme_v1.xml  bg_style_theme_v2.xml  bg_style_v0.xml  bg_style_while.xml  bg_style_while_circle.xml  bg_style_while_top_radius.xml  bg_update_popuwindowns.xml  bg_update_popuwindowns_2.xml  bg_while_editext.xml  bg_write_comment.xml  bg_write_commentv2.xml  button_login_register.xml  (+147 more)
appV1/src/main/res/layout/: acticvity_layout_search.xml  activity_about_cuckoo.xml  activity_add_coupon.xml  activity_bind_new_phone.xml  activity_certification_centre.xml  activity_coupon_manager.xml  activity_findpassword.xml  activity_friend_request.xml  activity_home.xml  activity_layout_account_setting.xml  activity_layout_chating.xml  activity_layout_collections.xml  activity_layout_ed_info.xml  activity_layout_feedbacks.xml  activity_layout_message.xml  activity_layout_reset_password.xml  activity_layout_systemsetting.xml  activity_login.xml  activity_main.xml  activity_mpreview_image.xml  activity_pickpicture.xml  activity_post_deail.xml  activity_post_deail_backup.xml  (+113 more)
(+442 files in other folders)
